--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 2.0.0
 homepage: https://github.com/pasaneramusugoda/date_time_picker_widget
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=3.1.4 <4.0.0'
+#  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
